# disease-prediction

./: pyproject.toml
.ipynb_checkpoints/: disease-prediction-checkpoint.ipynb
