[tool.poetry]
name = "disease-prediction"
version = "0.1.0"
description = ""
authors = ["ralf-t <tabo.ralfmartin@ue.edu.ph>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.4"
pandas = "^1.4.2"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
openpyxl = "^3.0.10"
notebook = "^6.4.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
